# FOEDAG

./: .clang-tidy  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  DEPENDENCIES.md  INSTALL.md  LICENSE  Makefile  Makefile.au  README.md  WIN_BUILD.md  code-coverage.sh  device.xml  foedag_version.h.in  foedag_version.ql.h.in  gbox_top.tcl  sdt_gen_cpus_cluster_node_output_sdt.sdt  sdt_gen_cpus_node_output_sdt.sdt  sdt_gen_memory_node_output_sdt.sdt  sdt_gen_root_metadata_node_output_sdt.sdt  sdt_gen_soc_node_output_sdt.sdt  valgrind.supp
src/Compiler/: CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerDefines.cpp  CompilerDefines.h  CompilerFactory.cpp  CompilerFactory.h  CompilerOpenFPGA.cpp  CompilerOpenFPGA.h  CompilerOpenFPGA_ql.cpp  CompilerOpenFPGA_ql.h  Constraints.cpp  Constraints.h  Design.cpp  Design.h  DesignManager.cpp  DesignManager.h  Log.cpp  Log.h  NetlistEditData.cpp  NetlistEditData.h  ProcessUtils.cpp  ProcessUtils.h  QLDeviceAvailableResourcesWidget.cpp  QLDeviceAvailableResourcesWidget.h  QLDeviceManager.cpp  QLDeviceManager.h  QLMetricsManager.cpp  QLMetricsManager.h  QLParser.cpp  QLParser.h  QLSettingsManager.cpp  QLSettingsManager.h  Task.cpp  Task.h  TaskGlobal.h  TaskManager.cpp  TaskManager.h  TaskManager_ql.cpp  TaskModel.cpp  (+12 more)
src/Configuration/: CMakeLists.txt
src/Console/: CMakeLists.txt  Console.cpp  Console.h  ConsoleDefines.cpp  ConsoleDefines.h  ConsoleInterface.cpp  ConsoleInterface.h  ConsoleWidget.cpp  ConsoleWidget.h  DummyParser.cpp  DummyParser.h  FileInfo.cpp  FileInfo.h  FileNameParser.cpp  FileNameParser.h  OutputFormatter.cpp  OutputFormatter.h  SearchWidget.cpp  SearchWidget.h  StreamBuffer.cpp  StreamBuffer.h  TclConsole.cpp  TclConsole.h  TclConsoleBuilder.cpp  TclConsoleBuilder.h  TclConsoleWidget.cpp  TclConsoleWidget.h  TclController.cpp  TclController.h  TclErrorParser.cpp  TclErrorParser.h  TclWorker.cpp  TclWorker.h
src/DesignRuns/: CMakeLists.txt  create_runs_dialog.cpp  create_runs_dialog.h  create_runs_dialog.ui  create_runs_form.cpp  create_runs_form.h  create_runs_form.ui  device_planner_dialog.cpp  device_planner_dialog.h  device_planner_dialog.ui  runs_form.cpp  runs_form.h  runs_grid.cpp  runs_grid.h  runs_grid_delegate.cpp  runs_grid_delegate.h  runs_options_form.cpp  runs_options_form.h  runs_options_form.ui  runs_summary_form.cpp  runs_summary_form.h  runs_summary_form.ui  select_design_type_form.cpp  select_design_type_form.h  select_design_type_form.ui
src/DeviceModeling/: CMakeLists.txt  DeviceModelerInterface.cpp  DeviceModelerInterface.h  DeviceModeling.cpp  DeviceModeling.h  Model.cpp  Model.h  device.h  device_block.h  device_instance.h  device_modeler.h  device_net.h  device_pin.h  device_port.h  device_signal.h  logging_utilities.h  rs_expression.h  rs_expression_evaluator.h  rs_parameter.h  rs_parameter_type.h  speedlog.h
src/IPGenerate/: CMakeLists.txt  IPCatalog.cpp  IPCatalog.h  IPCatalogBuilder.cpp  IPCatalogBuilder.h  IPGenerator.cpp  IPGenerator.h
src/InteractivePathAnalysis/: CMakeLists.txt  ConvertUtils.cpp  CustomMenu.cpp  CustomMenu.h  FilterCriteriaConf.cpp  FilterCriteriaConf.h  NCriticalPathFilterModel.cpp  NCriticalPathFilterModel.h  NCriticalPathFilterWidget.cpp  NCriticalPathFilterWidget.h  NCriticalPathItem.cpp  NCriticalPathItem.h  NCriticalPathItemDelegate.cpp  NCriticalPathItemDelegate.h  NCriticalPathModel.cpp  NCriticalPathModel.h  NCriticalPathModelLoader.cpp  NCriticalPathModelLoader.h  NCriticalPathModuleInfo.h  NCriticalPathParameters.cpp  NCriticalPathParameters.h  NCriticalPathReportParser.cpp  NCriticalPathReportParser.h  NCriticalPathStatusBar.cpp  NCriticalPathStatusBar.h  NCriticalPathTheme.h  NCriticalPathToolsWidget.cpp  NCriticalPathToolsWidget.h  NCriticalPathView.cpp  NCriticalPathView.h  NCriticalPathWidget.cpp  NCriticalPathWidget.h  Process.cpp  Process.h  RoundProgressWidget.cpp  RoundProgressWidget.h  SimpleLogger.h  VprProcess.cpp  VprProcess.h  custommenu.cpp  (+32 more)
src/IpConfigurator/: CMakeLists.txt  IPDialogBox.cpp  IPDialogBox.h  IPDialogBox.ui  IpCatalogTree.cpp  IpCatalogTree.h  IpConfigDlg.cpp  IpConfigDlg.h  IpConfigWidget.cpp  IpConfigWidget.h  IpConfigurator.cpp  IpConfigurator.h  IpConfiguratorCreator.cpp  IpConfiguratorCreator.h  IpInstancesTree.cpp  IpInstancesTree.h  IpTreesWidget.cpp  IpTreesWidget.h  ip_resources.qrc
src/Main/: AboutWidget.cpp  AboutWidget.h  AboutWidget_ql.cpp  CMakeLists.txt  CommandLine.cpp  CommandLine.h  CompilerNotifier.cpp  CompilerNotifier.h  DialogProvider.cpp  DialogProvider.h  Foedag.cpp  Foedag.h  FoedagStyle.cpp  FoedagStyle.h  Foedag_ql.cpp  GuiMain_test.cpp  JsonReportGenerator.cpp  JsonReportGenerator.h  ReportGenerator.cpp  ReportGenerator.h  Settings.cpp  Settings.h  Tasks.cpp  Tasks.h  Tasks_ql.cpp  TclSimpleParser.cpp  TclSimpleParser.h  ToolContext.h  WidgetFactory.cpp  WidgetFactory.h  foedag.h  licenseviewer.cpp  licenseviewer.h  main.cpp  main_ql.cpp  qttclnotifier.cpp  qttclnotifier.hpp  registerTclCommands.cpp  registerTclCommands_ql.cpp
src/NewFile/: CMakeLists.txt  new_file.cpp  new_file.h  new_file_dialog.cpp  new_file_dialog.h  newfilemodel.cpp  newfilemodel.h
src/NewProject/: CMakeLists.txt  CustomLayout.cpp  CustomLayout.h  CustomLayout.ui  CustomLayoutBuilder.cpp  CustomLayoutBuilder.h  SettingsGuiInterface.h  add_constraints_form.cpp  add_constraints_form.h  add_constraints_form.ui  add_sim_form.cpp  add_sim_form.h  add_sim_form.ui  add_source_form.cpp  add_source_form.h  add_source_form.ui  create_file_dialog.cpp  create_file_dialog.h  create_file_dialog.ui  device_planner_form.cpp  device_planner_form.h  device_planner_form.ui  location_form.cpp  location_form.h  location_form.ui  new_project_config.cpp  new_project_config.h  new_project_dialog.cpp  new_project_dialog.h  new_project_dialog.ui  new_project_dialog_ql.cpp  newproject.qrc  newproject_main.cpp  newprojectmodel.cpp  newprojectmodel.h  project_type_form.cpp  project_type_form.h  project_type_form.ui  source_grid.cpp  source_grid.h  (+3 more)
src/PinAssignment/: BufferedComboBox.cpp  BufferedComboBox.h  CMakeLists.txt  (+37 more)
(+767 files in other folders)
